--- a/src/content/generals/Turenne.yaml
+++ b/src/content/generals/Turenne.yaml
@@ -1,103 +1,90 @@
 ---
 general:
-  name: Elise
+  name: Turenne
   display: summary
-  score_as: Ground
-  leadership: 119
-  leadership_increment: 9.13
-  defense: 112
-  defense_increment: 8.88
-  attack: 114
-  attack_increment: 9.11
-  politics: 113
-  politics_increment: 8.26
+  level: '1'
   stars: '10'
+  score_as: Ground
+  leadership: 125 
+  leadership_increment: 9.13
+  attack: 116 
+  attack_increment: 8.82
+  defense: 113 
+  defense_increment: 8.76
+  politics: 107 
+  politics_increment: 8.64
   books:
-    - name: Dragon's Song
+    - name: Crossing the River Rhine
       buff:
-        - attribute: HP
-          class: Ground
-          condition: leading_the_army_to_attack
-          value:
-            number: 30
-            unit: percentage
-        - attribute: HP
-          class: Mounted
-          condition: leading_the_army_to_attack
-          value:
-            number: 30
-            unit: percentage
         - attribute: Attack
-          condition: dragon_to_the_attack
           class: Ground
           value:
-            number: 30
+            number: 35
+            unit: percentage
+        - attribute: Defense
+          class: Ground
+          value:
+            number: 35
+            unit: percentage
+        - attribute: Defense
+          class: Mounted
+          value:
+            number: 35
             unit: percentage
   ascending:
     - level: '6'
       buff:
+        - attribute: Attack
+          class: Ground
+          value:
+            number: 5
+            unit: percentage
         - attribute: HP
-          condition: Marching
           class: Ground
           value:
             number: 10
             unit: percentage
         - attribute: HP
-          condition: Marching
           class: Mounted
           value:
             number: 10
-            unit: percentage
-        - attribute: Attack
-          condition: dragon_to_the_attack
-          class: Ground
-          value:
-            number: 15
             unit: percentage
     - level: '7'
       buff:
-        - attribute: Wounded_to_Death
-          condition: Enemy_In_City
+        - attribute: Death_to_Wounded
+          condition: Marching
           value:
             number: 10
-            unit: percentage
-        - attribute: March_Size_Capacity
-          value:
-            number: 14
             unit: percentage
     - level: '8'
       buff:
-        - attribute: Defense
-          class: Ground
-          condition: Marching
+        - attribute: March_Size_Capacity
           value:
-            number: 60
+            number: 12
             unit: percentage
     - level: '9'
       buff:
-        - attribute: HP
-          class: Mounted
-          condition: leading_the_army_to_attack
-          value:
-            number: 10
-            unit: percentage
-        - attribute: HP
-          class: Ground
-          condition: leading_the_army_to_attack
-          value:
-            number: 10
-            unit: percentage
-        - attribute: Defense
-          class: Ground
-          condition: leading_the_army_to_attack
-          value:
-            number: 10
-            unit: percentage
         - attribute: Attack
-          condition: dragon_to_the_attack
+          class: Ground
+          value:
+            number: 10
+            unit: percentage
+        - attribute: HP
           class: Ground
           value:
             number: 20
+            unit: percentage
+    - level: '10'
+      buff:
+        - attribute: Attack
+          class: Ground
+          value:
+            number: 20
+            unit: percentage
+        - attribute: Defense
+          class: Ground
+          value:
+            number: 35
             unit: percentage
   specialities:
     - name: Ground Troop Assault
@@ -311,17 +298,90 @@ general:
               value:
                 number: 4
                 unit: percentage
-    - name: Dragontamer
+    - name: Battle of the Dunes
       attribute:
+        - level: Green
+          buff:
+            - attribute: Attack
+              class: Ground
+              value:
+                number: 3
+                unit: percentage
+            - attribute: Defense
+              class: Ground
+              value:
+                number: 2
+                unit: percentage
+            - attribute: HP
+              class: Ground
+              value:
+                number: 2
+                unit: percentage
+        - level: Blue
+          buff:
+            - attribute: Attack
+              class: Ground
+              value:
+                number: 3
+                unit: percentage
+            - attribute: Defense
+              class: Ground
+              value:
+                number: 3
+                unit: percentage
+            - attribute: HP
+              class: Ground
+              value:
+                number: 2
+                unit: percentage
+        - level: Purple
+          buff:
+            - attribute: Attack
+              class: Ground
+              value:
+                number: 6
+                unit: percentage
+            - attribute: Defense
+              class: Ground
+              value:
+                number: 5
+                unit: percentage
+            - attribute: HP
+              class: Ground
+              value:
+                number: 4
+                unit: percentage
+        - level: Orange
+          buff:
+            - attribute: Attack
+              class: Ground
+              value:
+                number: 6
+                unit: percentage
+            - attribute: Defense
+              class: Ground
+              value:
+                number: 6
+                unit: percentage
+            - attribute: HP
+              class: Ground
+              value:
+                number: 4
+                unit: percentage
         - level: Gold
           buff:
             - attribute: Attack
               class: Ground
               value:
-                number: 30
+                number: 12
+                unit: percentage
+            - attribute: Defense
+              class: Ground
+              value:
+                number: 9
                 unit: percentage
             - attribute: HP
               class: Ground
               value:
-                number: 30
+                number: 8
                 unit: percentage
