--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -22,10 +22,20 @@
     "module": "ESNext",
     "moduleResolution": "node",
     "target": "ES2020",
-    "lib": ["es2020", "DOM"]
+    "lib": ["es2020", "DOM"],
+    "baseUrl": ".",
+    "paths": {
+      "@components/*": ["src/components/*"],
+      "@layouts/*": ["src/layouts/*"],
+      "@lib/*": ["src/lib/*"],
+      "@schemas/*": ["src/schemas/*"],
+      "@styles/*": ["src/styles/*"],
+      "@public/*": ["public/*"],
+    }
   },
   "include": [
     "./src/bin/**/*",
     "./src/lib/**/*",
+    "./src/schemas/**/*",
   ]
 }
