--- a/src/content/generals/Suleiman_the_Magnificent.yaml
+++ b/src/content/generals/Suleiman_the_Magnificent.yaml
@@ -315,12 +315,12 @@ general:
             unit: percentage
     - level: '10'
       buff:
-        - attrbiute: Attack
+        - attribute: Attack
           class: Archers
           value:
             number: 10
             unit: percentage
-        - attrbiute: Attack
+        - attribute: Attack
           class: Siege
           value:
             number: 10
