--- a/src/content/generals/Septimius_Severus.yaml
+++ b/src/content/generals/Septimius_Severus.yaml
@@ -58,7 +58,7 @@ general:
             class: Siege
             value:
               number: 2
-              unit: flat
+              unit: percentage
           - attribute: Defense
             class: Siege
             value:
@@ -364,7 +364,7 @@ general:
             class: Siege
             value:
               number: 25
-              unit: flat
+              unit: percentage
       - level: '10'
         buff:
           - attribute: Attack
