--- a/src/content/generalConflictData/ra3.yml
+++ b/src/content/generalConflictData/ra3.yml
@@ -12,37 +12,37 @@ conflicts:
     - Vladimir the Great
     - Winfield Scott
     - Li Shimin
-  books:
-    - name: Ranged Attack Increase
-      level: '1'
-      buff:
-      - attribute: Attack
-        class: Ranged
-        value:
-          number: 10
-          unit: percentage
-    - name: Ranged Attack Increase
-      level: '2'
-      buff:
-      - attribute: Attack
-        class: Ranged
-        value:
-          number: 15
-          unit: percentage
-    - name: Ranged Attack Increase
-      level: '3'
-      buff:
-      - attribute: Attack
-        class: Ranged
-        value:
-          number: 20
-          unit: percentage
-    - name: Ranged Attack Increase
-      level: '4'
-      buff:
-      - attribute: Attack
-        class: Ranged
-        value:
-          number: 25
-          unit: percentage
+books:
+  - name: Ranged Attack Increase
+    level: '1'
+    buff:
+    - attribute: Attack
+      class: Archers
+      value:
+        number: 10
+        unit: percentage
+  - name: Ranged Attack Increase
+    level: '2'
+    buff:
+    - attribute: Attack
+      class: Archers
+      value:
+        number: 15
+        unit: percentage
+  - name: Ranged Attack Increase
+    level: '3'
+    buff:
+    - attribute: Attack
+      class: Archers
+      value:
+        number: 20
+        unit: percentage
+  - name: Ranged Attack Increase
+    level: '4'
+    buff:
+    - attribute: Attack
+      class: Archers
+      value:
+        number: 25
+        unit: percentage
 
