--- a/src/content/generalConflictData/ra4a.yml
+++ b/src/content/generalConflictData/ra4a.yml
@@ -7,40 +7,40 @@ conflicts:
     - Elizabeth I
     - Gwanggaeto the Great
     - Gustavus Adolphus
-  books:
-    - name: Ranged Defense Increase
-      level: '1'
-      buff:
-      - attribute: Defense
-        condition: When_Not_Mine
-        class: Ranged
-        value:
-          number: 10
-          unit: percentage
-    - name: Ranged Defense Increase
-      level: '2'
-      buff:
-      - attribute: Defense
-        condition: When_Not_Mine
-        class: Ranged
-        value:
-          number: 15
-          unit: percentage
-    - name: Ranged Defense Increase
-      level: '3'
-      buff:
-      - attribute: Defense
-        condition: When_Not_Mine
-        class: Ranged
-        value:
-          number: 20
-          unit: percentage
-    - name: Ranged Defense Increase
-      level: '4'
-      buff:
-      - attribute: Defense
-        condition: When_Not_Mine
-        class: Ranged
-        value:
-          number: 25
-          unit: percentage
+books:
+  - name: Ranged Defense Increase
+    level: '1'
+    buff:
+    - attribute: Defense
+      condition: When_Not_Mine
+      class: Archers
+      value:
+        number: 10
+        unit: percentage
+  - name: Ranged Defense Increase
+    level: '2'
+    buff:
+    - attribute: Defense
+      condition: When_Not_Mine
+      class: Archers
+      value:
+        number: 15
+        unit: percentage
+  - name: Ranged Defense Increase
+    level: '3'
+    buff:
+    - attribute: Defense
+      condition: When_Not_Mine
+      class: Archers
+      value:
+        number: 20
+        unit: percentage
+  - name: Ranged Defense Increase
+    level: '4'
+    buff:
+    - attribute: Defense
+      condition: When_Not_Mine
+      class: Archers
+      value:
+        number: 25
+        unit: percentage
