--- a/src/content/generalConflictData/20231030-0.yml
+++ b/src/content/generalConflictData/20231030-0.yml
@@ -3,3 +3,36 @@ conflicts:
     - Raimondo
   other:
     - Zucca
+books:
+  - name: Siege Attack Increase
+    level: '1'
+    buff:
+    - attribute: Attack    
+      class: Siege
+      value:
+        number: 10
+        unit: percentage
+  - name: Siege Attack Increase
+    level: '2'
+    buff:
+    - attribute: Attack
+      class: Siege
+      value:
+        number: 15
+        unit: percentage
+  - name: Siege Attack Increase
+    level: '3'
+    buff:
+    - attribute: Attack
+      class: Siege
+      value:
+        number: 20
+        unit: percentage
+  - name: Siege Attack Increase
+    level: '4'
+    buff:
+    - attribute: Attack
+      class: Siege
+      value:
+        number: 25
+        unit: percentage
