I was missing some conflicts

--- a/src/content/generalConflictData/20231030-0.yml
+++ b/src/content/generalConflictData/20231030-0.yml
@@ -3,6 +3,10 @@ conflicts:
     - Raimondo
   other:
     - Zucca
+    - Petronas
+    - John Churchill
+    - Philip II
+    - Septimus Severus
 books:
   - name: Siege Attack Increase
     level: '1'
