--- a/src/content/generalConflictData/20231030-7.yml
+++ b/src/content/generalConflictData/20231030-7.yml
@@ -43,11 +43,13 @@ books:
     level: '1'
     buff:
       - attribute: HP
+        condition: When_Not_Mine
         class: Siege
         value:
           number: 10
           unit: percentage
   - name: Siege HP
+    condition: When_Not_Mine
     level: '2'
     buff:
       - attribute: HP
@@ -56,6 +58,7 @@ books:
           number: 15
           unit: percentage
   - name: Siege HP
+    condition: When_Not_Mine
     level: '3'
     buff:
       - attribute: HP
@@ -64,6 +67,7 @@ books:
           number: 20
           unit: percentage
   - name: Siege HP
+    condition: When_Not_Mine
     level: '4'
     buff:
       - attribute: HP
