--- a/src/content/generals/Elektra.yaml
+++ b/src/content/generals/Elektra.yaml
@@ -338,3 +338,75 @@ general:
             value:
               number: 4
               unit: percentage
+    - name: Holy Knight
+      attribute:
+        - level: 'Green'
+          buff:
+          - attribute: Attack
+            condition: Marching
+            class: Archers
+            value: 
+              number: 3
+              unit: percentage
+          - attribute: Attack
+            condition: Marching
+            class: Mounted
+            value: 
+              number: 3
+              unit: percentage
+        - level: 'Blue'
+          buff:
+          - attribute: Attack
+            condition: Marching
+            class: Archers
+            value: 
+              number: 3
+              unit: percentage
+          - attribute: Attack
+            condition: Marching
+            class: Mounted
+            value: 
+              number: 3
+              unit: percentage
+        - level: 'Purple'
+          buff:
+          - attribute: Attack
+            condition: Marching
+            class: Archers
+            value: 
+              number: 5
+              unit: percentage
+          - attribute: Attack
+            condition: Marching
+            class: Mounted
+            value: 
+              number: 5
+              unit: percentage
+        - level: 'Orange'
+          buff:
+          - attribute: Attack
+            condition: Marching
+            class: Archers
+            value: 
+              number: 5
+              unit: percentage
+          - attribute: Attack
+            condition: Marching
+            class: Mounted
+            value: 
+              number: 5
+              unit: percentage
+        - level: 'Gold'
+          buff:
+          - attribute: Attack
+            condition: Marching
+            class: Archers
+            value: 
+              number: 10
+              unit: percentage
+          - attribute: Attack
+            condition: Marching
+            class: Mounted
+            value: 
+              number: 10
+              unit: percentage
