--- a/src/content/generals/Petronas.yaml
+++ b/src/content/generals/Petronas.yaml
@@ -212,6 +212,40 @@ general:
               value:
                 number: 2
                 unit: percentage
+        - level: Orange
+          buff:
+            - attribute: Attack
+              class: Siege
+              value:
+                number: 2
+                unit: percentage
+            - attribute: HP
+              class: Siege
+              value:
+                number: 2
+                unit: percentage
+            - attribute: Defense
+              class: Siege
+              value:
+                number: 2
+                unit: percentage
+        - level: Gold
+          buff:
+            - attribute: Attack
+              class: Siege
+              value:
+                number: 4
+                unit: percentage
+            - attribute: HP
+              class: Siege
+              value:
+                number: 4
+                unit: percentage
+            - attribute: Defense
+              class: Siege
+              value:
+                number: 4
+                unit: percentage
     - name: Battle of Lalakaon
       attribute:
         - level: 'Green'
