--- a/src/content/generals/Mihai.yaml
+++ b/src/content/generals/Mihai.yaml
@@ -320,3 +320,65 @@ general:
             value:
               number: 4
               unit: percentage
+    - name: Romanian Ruler
+      attribute:
+        - level: Green
+          buff:
+            - attribute: Attack
+              class: Archers
+              value:
+                number: 3
+                unit: percentage
+            - attribute: Defense
+              class: Archers
+              value:
+                number: 4
+                unit: percentage
+        - level: Blue
+          buff:
+            - attribute: Attack
+              class: Archers
+              value:
+                number: 4
+                unit: percentage
+            - attribute: Defense
+              class: Archers
+              value:
+                number: 4
+                unit: percentage
+        - level: Purple
+          buff:
+            - attribute: Attack
+              class: Archers
+              value:
+                number: 7
+                unit: percentage
+            - attribute: Defense
+              class: Archers
+              value:
+                number: 8
+                unit: percentage
+        - level: Orange
+          buff:
+            - attribute: Attack
+              class: Archers
+              value:
+                number: 7
+                unit: percentage
+            - attribute: Defense
+              class: Archers
+              value:
+                number: 8
+                unit: percentage
+        - level: Gold
+          buff:
+            - attribute: Attack
+              class: Archers
+              value:
+                number: 14
+                unit: percentage
+            - attribute: Defense
+              class: Archers
+              value:
+                number: 16
+                unit: percentage
