finished input for Alfred

--- a/src/content/generals/Alfred_the_Great.yaml
+++ b/src/content/generals/Alfred_the_Great.yaml
@@ -34,60 +34,60 @@ general:
       - level: Green
         buff:
           - attribute: Attack
-            class: Ranged
+            class: Archers
             value:
               number: 1
               unit: percentage
           - attribute: Defense
-            class: Ranged
+            class: Archers
             value:
               number: 1
               unit: percentage
       - level: Blue
         buff:
           - attribute: Attack
-            class: Ranged
+            class: Archers
             value:
               number: 1
               unit: percentage
           - attribute: Defense
-            class: Ranged
+            class: Archers
             value:
               number: 1
               unit: percentage
       - level: Purple
         buff:
           - attribute: Attack
-            class: Ranged
+            class: Archers
             value:
               number: 2
               unit: percentage
           - attribute: Defense
-            class: Ranged
+            class: Archers
             value:
               number: 2
               unit: percentage
       - level: Orange
         buff:
           - attribute: Attack
-            class: Ranged
+            class: Archers
             value:
               number: 2
               unit: percentage
           - attribute: Defense
-            class: Ranged
+            class: Archers
             value:
               number: 2
               unit: percentage
       - level: Gold
         buff:
           - attribute: Attack
-            class: Ranged
+            class: Archers
             value:
               number: 4
               unit: percentage
           - attribute: Defense
-            class: Ranged
+            class: Archers
             value:
               number: 4
               unit: percentage
@@ -270,6 +270,43 @@ general:
             value:
               number: 4
               unit: percentage
+    - name: Battle of Edington
+      attribute:
+        - level: Green
+          buff:
+            - attribute: Attack
+              class: Archers
+              value: 
+                number: 3
+                unit: percentage
+        - level: Blue
+          buff:
+            - attribute: Attack
+              class: Archers
+              value: 
+                number: 4
+                unit: percentage
+        - level: Purple
+          buff:
+            - attribute: Attack
+              class: Archers
+              value: 
+                number: 7
+                unit: percentage
+        - level: Orange
+          buff:
+            - attribute: Attack
+              class: Archers
+              value: 
+                number: 7
+                unit: percentage
+        - level: Gold
+          buff:
+            - attribute: Attack
+              class: Archers
+              value: 
+                number: 14
+                unit: percentage
   ascending:
         - level: '6'
           buff:
