add in Subutai and Louis, I am fairly sure Louis belongs in this conflict group

--- a/src/content/generalConflictData/ra3.yml
+++ b/src/content/generalConflictData/ra3.yml
@@ -1,6 +1,7 @@
 conflicts:
   01HES9GM3NHCV0H5WA70VRHN10:
     - Subutai
+    - Louis IX
     - Minamoto no Yoshitsune
     - Harold III
     - Henry V
