--- a/src/content/generals/Elise.yaml
+++ b/src/content/generals/Elise.yaml
@@ -12,6 +12,7 @@ general:
   politics: 113
   politics_increment: 8.26
   stars: '10'
+  level: '1'
   books:
     - name: Dragon's Song
       buff:
