which revealed that many of the yaml files were in turn in need of updating

--- a/src/content/generalConflictData/20231030-1.yml
+++ b/src/content/generalConflictData/20231030-1.yml
@@ -1,5 +1,5 @@
 conflicts:
-  a:
+  01HGKZ0XZFTNXNA8E372Z59K7K:
     - Suleiman the Magnificent
     - Gustavus Adolphus
     - Gwanggaeto the Great
