--- a/src/content/generalConflictData/20231030-0.yml
+++ b/src/content/generalConflictData/20231030-0.yml
@@ -1,5 +1,5 @@
 conflicts:
-  a:
+  01HGKZ0XGTEWDNKZGG6M7EKVZ5:
     - Raimondo
   other:
     - Zucca
@@ -8,35 +8,35 @@ conflicts:
     - Philip II
     - Septimus Severus
 books:
-  - name: Siege Attack Increase
-    level: '1'
-    buff:
-    - attribute: Attack    
-      class: Siege
-      value:
-        number: 10
-        unit: percentage
-  - name: Siege Attack Increase
-    level: '2'
-    buff:
-    - attribute: Attack
-      class: Siege
-      value:
-        number: 15
-        unit: percentage
-  - name: Siege Attack Increase
-    level: '3'
-    buff:
-    - attribute: Attack
-      class: Siege
-      value:
-        number: 20
-        unit: percentage
-  - name: Siege Attack Increase
-    level: '4'
-    buff:
-    - attribute: Attack
-      class: Siege
-      value:
-        number: 25
-        unit: percentage
+- name: Siege Attack Increase
+  level: '1'
+  buff:
+  - attribute: Attack    
+    class: Siege
+    value:
+      number: 10
+      unit: percentage
+- name: Siege Attack Increase
+  level: '2'
+  buff:
+  - attribute: Attack
+    class: Siege
+    value:
+      number: 15
+      unit: percentage
+- name: Siege Attack Increase
+  level: '3'
+  buff:
+  - attribute: Attack
+    class: Siege
+    value:
+      number: 20
+      unit: percentage
+- name: Siege Attack Increase
+  level: '4'
+  buff:
+  - attribute: Attack
+    class: Siege
+    value:
+      number: 25
+      unit: percentage
