--- a/src/content/generalConflictData/ra3.yml
+++ b/src/content/generalConflictData/ra3.yml
@@ -1,5 +1,5 @@
 conflicts:
-  01HES9GM3NHCV0H5WA70VRHN10:
+  01HGKZACGC0AYAHS0Y64XGRNK8:
     - Subutai
     - Louis IX
     - Minamoto no Yoshitsune
@@ -8,42 +8,42 @@ conflicts:
     - Edward the Black Prince
     - Jumong
     - Antara
-  others:
+  other:
     - Elektra
     - Vladimir the Great
     - Winfield Scott
     - Li Shimin
 books:
-  - name: Ranged Attack Increase
-    level: '1'
-    buff:
-    - attribute: Attack
-      class: Archers
-      value:
-        number: 10
-        unit: percentage
-  - name: Ranged Attack Increase
-    level: '2'
-    buff:
-    - attribute: Attack
-      class: Archers
-      value:
-        number: 15
-        unit: percentage
-  - name: Ranged Attack Increase
-    level: '3'
-    buff:
-    - attribute: Attack
-      class: Archers
-      value:
-        number: 20
-        unit: percentage
-  - name: Ranged Attack Increase
-    level: '4'
-    buff:
-    - attribute: Attack
-      class: Archers
-      value:
-        number: 25
-        unit: percentage
+- name: Ranged Attack Increase
+  level: '1'
+  buff:
+  - attribute: Attack
+    class: Archers
+    value:
+      number: 10
+      unit: percentage
+- name: Ranged Attack Increase
+  level: '2'
+  buff:
+  - attribute: Attack
+    class: Archers
+    value:
+      number: 15
+      unit: percentage
+- name: Ranged Attack Increase
+  level: '3'
+  buff:
+  - attribute: Attack
+    class: Archers
+    value:
+      number: 20
+      unit: percentage
+- name: Ranged Attack Increase
+  level: '4'
+  buff:
+  - attribute: Attack
+    class: Archers
+    value:
+      number: 25
+      unit: percentage
 
