properly handle the dragon condition

--- a/src/content/generals/Napoleon_Prime.yaml
+++ b/src/content/generals/Napoleon_Prime.yaml
@@ -263,13 +263,13 @@ general:
               number: 3
               unit: percentage
           - attribute: Attack
-            condition: Enemy
+            condition: Reduces_Enemy_with_a_Dragon
             class: Archers
             value:
               number: -1
               unit: percentage
           - attribute: Attack
-            condition: Enemy
+            condition: Reduces_Enemy_with_a_Dragon
             class: Siege
             value:
               number: -1
@@ -289,13 +289,13 @@ general:
               number: 3
               unit: percentage
           - attribute: Attack
-            condition: Enemy
+            condition: Reduces_Enemy_with_a_Dragon
             class: Archers
             value:
               number: -2
               unit: percentage
           - attribute: Attack
-            condition: Enemy
+            condition: Reduces_Enemy_with_a_Dragon
             class: Siege
             value:
               number: -2
@@ -315,13 +315,13 @@ general:
               number: 6
               unit: percentage
           - attribute: Attack
-            condition: Enemy
+            condition: Reduces_Enemy_with_a_Dragon
             class: Archers
             value:
               number: -3
               unit: percentage
           - attribute: Attack
-            condition: Enemy
+            condition: Reduces_Enemy_with_a_Dragon
             class: Siege
             value:
               number: -3
@@ -341,13 +341,13 @@ general:
               number: 6
               unit: percentage
           - attribute: Attack
-            condition: Enemy
+            condition: Reduces_Enemy_with_a_Dragon
             class: Archers
             value:
               number: -3
               unit: percentage
           - attribute: Attack
-            condition: Enemy
+            condition: Reduces_Enemy_with_a_Dragon
             class: Siege
             value:
               number: -3
@@ -367,13 +367,13 @@ general:
               number: 12
               unit: percentage
           - attribute: Attack
-            condition: Enemy
+            condition: Reduces_Enemy_with_a_Dragon
             class: Archers
             value:
               number: -6
               unit: percentage
           - attribute: Attack
-            condition: Enemy
+            condition: Reduces_Enemy_with_a_Dragon
             class: Siege
             value:
               number: -6
