--- a/src/content/generalConflictData/sg3.yml
+++ b/src/content/generalConflictData/sg3.yml
@@ -1,9 +1,10 @@
 conflicts:
-  01HGKZ108TB88BJG9YKKGJDJWF:
-    - Septimius Severus
-  other:
+  01HHE55GYM266T9M3AN0VFSFZN:
+    - Raimondo
     - Surena
     - Emperor Qin Shihuang
+  other:
+    - Septimius Serverus
     - William Wallace
     - Khalid
 books:
