--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -9,6 +9,8 @@
       // compilerOptions specified here will override those declared below,
       // but *only* in ts-node.  Useful if you want ts-node and tsc to use
       // different options with a single tsconfig.json.
+      "target": "ES2020",
+      "lib": ["es2020", "DOM"],
     }
   },
   "compilerOptions": {
