--- a/src/content/generalConflictData/ra4a.yml
+++ b/src/content/generalConflictData/ra4a.yml
@@ -7,6 +7,7 @@ conflicts:
     - Elizabeth I
     - Gwanggaeto the Great
     - Gustavus Adolphus
+    - Louis IX 
 books:
   - name: Ranged Defense Increase
     level: '1'
